@@ -225,15 +225,8 @@ typedef struct CFPropertyList *CFPropertyListRef;
 //
 // CFString
 //
-#ifdef __OBJC__
-@class NSString;
-@class NSMutableString;
-typedef NSString* CFStringRef;
-typedef NSMutableString* CFMutableStringRef;
-#else
 typedef const struct __CFString * CFStringRef;
 typedef struct __CFString * CFMutableStringRef;
-#endif
 
 
 
