@@ -1,4 +1,10 @@
-2011-05-06 Stefan Bidigaray <stefanbidi@gmail.com>
+2011-05-20 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/NSCFType.m:
+	* Source/NSCFType.h: Add NSCopying.
+	* Headers/CoreFoundation/CFBase.h: No longer define CFString as NSString.
+
+2011-05-20 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFString.m: Deleted.
 	* Source/GNUmakefile:
